[workspace]
resolver = "2"
members = [
  "contracts/mock-contract",
  "contracts/node-father-migration",
  # "scripts",
]
exclude = ["scripts"]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
